bootstrap/main.css
/* $Id$ $URL$ */
body {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

.navbar-fixed-top {
    position: fixed;
}

.navbar-fixed-top .container {
    width: 100%;
}

.nav img[id="search-img"] {
    margin: 10px 0 0 0;
}

.navbar .nav > li > a {
    margin-right: 0px;
}

.nav-tabs > li > a, .nav-pills > li > a {
    line-height: 14px;
    margin-right: 2px;
    padding-left: 6px;
    padding-right: 6px;
}

.module-title .icon, .module-title h1 {
    margin-left: 10px;
    margin-top: -15px;
}

.module-nav {
    margin-top: -10px;
}

.crumb-right li {
    margin-right: 5px;
}

.crumb-right select {
    height: 25px;
}

.crumb-right input[type="text"] {
    height: 15px;
}

.alert {
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
    padding-left: 40px;
    text-align: center;
    width: 300px;
}

@media screen and (-webkit-min-device-pixel-ratio:0) {
    .alert { margin-top: -40px; }
}

input[id="keyword"] {
    height: 12px;
    margin: 10px 0 0 0;
    width:  120px;
}
select[name="m"] {
    height: 24px;
    margin: 9px 0 0 10px;
    width: 100px;
}

#nav-sub {
    float: right;
    margin-right: 10px;
    margin-top: 50px;
}

table {

}
/* Standard table 'spreadsheet' style */
table.tbl {
    background: #aeaeae;
    width: 100%;
}

table.tbl TH {
    white-space: nowrap;
    border-left-width: 0px;
    border-right-width: 1px;
    border-top-width: 0px;
    border-bottom-width: 0px;
    padding: 2px 2px 2px 2px;
    text-align:center;
    line-height:18px;
    list-style-type: disc;
    list-style-position: inside;
}

div.std {
    background: inherit;
    /**height: 0px;*/
}

.main {
    background: #ddd;
    margin-left: 20px;
    margin-right: 20px;
}

select, textarea, input[type="text"], input[type="password"],
    input[type="datetime"], input[type="datetime-local"], input[type="date"],
    input[type="month"], input[type="time"], input[type="week"],
    input[type="number"], input[type="email"], input[type="url"],
    input[type="search"], input[type="tel"], input[type="color"],
    .uneditable-input {
    font-size: 10px;
    vertical-align: middle;
}

input[name="search_string"] {
    height: 15px;
}

.crumb ul {
    margin-left: 5px;
    padding: 0px;
}
.crumb ul li {
	margin: 2px 2px 2px;
	color: #000000;
	text-decoration: none;
	display: inline; /* Remove this line arrange the buttons vertically */
	background: transparent url('images/crumb_right.gif') no-repeat scroll top right;
	float: left;
	height: 22px;
	padding-right: 10px; /* sliding doors padding */
	border:0px;
}
.crumb ul li span, .crumb ul li div {
    background: transparent url('images/crumb_left.gif') no-repeat;
    display: block;
    line-height: 14px;
    padding: 2px 0 5px 10px;
}
.crumb ul li a {
	display: inline;
	color: #000000;
}
.crumb ul li a:active {
	color: #AD0000;
}
.crumb ul li a:hover {
	color: #FFFFFF;
}

.nav-tabs {
    margin-bottom: 0px;
}

.view th, .list th {
    background: #bbb;
    font-weight: bold;
    text-align: left;
}

table.list tr {
    background: #ddd;
}
table.list tr:nth-child(even) {
    background-color: #eee;
}

/* month calendar - title area */
table.motitle {
    background-color: #CCC;
}
table.motitle td {
    background-color: #f0f0f0;
}
table.motitle th {
    background-color: #f0f0f0;
    font-size: 12pt;
}

table.mocal {
    background-color: #777777;
    cursor: pointer;
}
table.mocal th {
    background-color: #CCC;
    color: black;
}
table.mocal td {
    border: 1px solid #E5E5E5;
    vertical-align: top;
}
table.mocal td.week {
    background-color: #CCC;
    height: 80px;
}
table.mocal td.empty {
    background-color: #e0e0e0;
    color: #aaaaaa;
    text-align: left;
    height: 80px;
}
table.mocal td.day  {
    background-color: #ffffff;
    color: #333366;
    text-align: left;
    height: 80px;
}
table.mocal td.today {
    background-color: #a5cbf7;
    color: #ffffff;
    text-align: left;
}

table.mocal td.weekend {
    background-color: #f0f0f0;
    text-align: left;
}

table.mocal td.event {
    background-color: #ffff99;
    text-align: left;
}

table.mocal .event {
}

.addedit input[type="text"] {
    height: 15px;
}

table.well {
    margin-bottom: 0px;
}

form[name="searchform"] input {
     margin-right: 0px;
     width: 100px;
}

select[name="task_type"] {
    width: 100px;
}

.crumb-right select {
    width: 100px;
}

.contact-info {
    min-height: 20px;
    padding: 19px;
    margin-bottom: 5px;
    background-color: rgb(245, 245, 245);
    border: 1px solid rgb(227, 227, 227);
    border-radius: 4px 4px 4px 4px;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05) inset;
}

.std.shadow {
    margin-top: 10px;
}

.addedit {
    margin-top: 70px;
}

.smartsearch {
    margin-top: 40px;
}

.smartsearch td {
    vertical-align: middle;
}

.smartsearch input {
    margin: 10px;
}

.footer a {
    font-size: x-small;
    margin: 20px;
}

select, input[type="text"], input[type="password"],
input[type="datetime"], input[type="datetime-local"], input[type="date"],
input[type="month"], input[type="time"], input[type="week"],
input[type="number"], input[type="email"], input[type="url"],
input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
    height: 25px;
    width: 80px;
}

label[for="email_assignees"], label[for="email_task_contacts"],
label[for="email_project_contacts"], label[for="email_log_user"] {
    text-align: left;
}


/* -------------------- Customisations --------------------- */

* { font-size: 14px; }
a.brand { position: relative; left: 10px; }
body > table { width: 95%; margin: 40px auto; }

div.module-nav { margin-bottom: 15px;}

.crumb ul li { background: none; }
.crumb-right ul li span, .crumb-right ul li div, .crumb ul li span, .crumb ul li div {
    background: rgb(0, 109, 204) none no-repeat;
    line-height: 20px;
    padding: 3px 10px;
	font-size: 14px;
}
.crumb ul li a {
	display: inline;
    color: #fff;
}
.crumb ul li a:active {
	color: #AD0000;
}
.crumb ul li div:hover {
    opacity: 0.8;
}

table.well table tr td:first-child { width: 70%;}

.view-column table, table.well { 
    border-spacing: 0;
    border-collapse: separate; 
}

tr, td, input, select, label {	font-size: 14px !important; }
table.well table tr td:first-child { width: 70%;}
table.well tr td input, table.well tr td select { width: 60%; display: inline-block; box-sizing: border-box; }

.btn-group .btn { margin-right: 5px;}
label { display: inline-block; vertical-align: center; }
table.list tr:hover td { font-style: none; }
.module-nav ~ div { clear: both; }

